fix on mobile

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -350,7 +350,7 @@
                     width: 40%;
 
                     @include tablet() {
-                        width: 30%;
+                        width: 35%;
                     }
                 }
 
